--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^1.1.1",
     "combined-stream2": "^1.1.1",
     "console-colors": "^1.0.1",
+    "deep-equal": "^1.0.1",
     "mongodb": "^2.0.43",
     "prompt": "^0.2.14",
     "semver": "^5.0.3",
